<resources>
    <string name="app_name">Guessing Game</string>

    <string name="valid">The number should between 0 and 100</string>

    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="beforeimplement">Before_Implement</string>
</resources>
